# Vinnijs_puks_grafs

./: CMakeLists.txt  main.cpp  vinnijs_puks_gr16014.cpp
sample_data/: expected_results.txt  sample3.txt
